release 1.1.3-ea (2009-11)
- Fixed issue 359
  https://jersey.dev.java.net/issues/show_bug.cgi?id=359
  The client API should use the default media type "application/octet-stream"
  if a default media type cannot be obtained for a request entity of Java type.
- Fixed issue 336
  https://jersey.dev.java.net/issues/show_bug.cgi?id=336
  A class that extends of Application or ResourceConfig referenced in the web.xml
  is now instantated as a component.
  If the class has a constructor that takes a single parameter of the
  type Map then the class is instantiated with that constructor and an instance
  of Map that contains all the initialization parameters is passed as the
  parameter. Otherwise, the class is instantiated as a singleton component
  managed by the runtime, and injection may be performed (the artifacts that
  may be injected are limited to injectable providers registered when
  the servlet or filter is configured).
- OAuth signature library now correctly percent encodes characters when
  generating a secret.
- Fixed issue 356
  https://jersey.dev.java.net/issues/show_bug.cgi?id=356
  Clarified JavaDoc for com.sun.jersey.core.header.MatchingEntityTag to
  state that instance of this type or the super type cannot be used to
  produce headers of the form "If-Match: *" or "If-None-Match: *".
- Fixed issue 357
  https://jersey.dev.java.net/issues/show_bug.cgi?id=357
  Clarifed JavaDoc for client API the response must be closed to ensure that
  underlying resources are correctly released.

release 1.1.2-ea (2009-08-25)
- Fixed issue 355
  https://jersey.dev.java.net/issues/show_bug.cgi?id=355
  URI conneg works for the case of when a suffix say "nt" is present
  in the path and is not preceded by a '.', for example "/ontology.nl
  URI conneg is now a container request filter, see:
  com.sun.jersey.api.container.filter.UriConnegFilter
  Developers may extend this filters and register it rather than utilizing the